syntax = "proto3";

service ProductService {
  rpc Add(AddReq) returns(AddRes);
  rpc Update(UpdateReq) returns(UpdateRes);
  rpc Delete(DeleteReq) returns(DeleteRes);
  rpc Get(GetReq) returns(GetRes);
}

message AddReq {
  Product product = 1;

}

message AddRes {
  Product product = 1;
  repeated  Error error = 2;
}

message UpdateReq {
  Product product = 1;
}

message UpdateRes {
  Product product = 1;
  Error error = 2;
}

message DeleteReq {
  int32 id = 1;
}

message DeleteRes {
  Error  error = 1;
}

message GetReq {
  int32 id = 1;
}

message GetRes {
  Product product = 1;
  Error error = 2;
}

// define Structure
message Product {
  int32 id = 1;
  string sku = 2;
  string name = 3;
  float price = 4;
  int32 quantity = 5;
}

message Error {
  int32 code  = 1;
  string message = 2;
  map<string, string> metadata = 3;
}